mc/docs/evidence/ctf-invalid-action-live-breadth-valence-precheck-v2.run.log
# CTF invalid-action live breadth Valence precheck v2
started_at=2026-06-23T01:25:40Z
command=nix develop --no-update-lock-file /home/brittonr/git/mc -c cargo test --example ctf invalid_opponent_base_return_drop_milestone_records_no_state_mutation_or_score -- --nocapture
mc compat shell: use 'mc-compat-runner --dry-run' or 'nix run .#mc-compat-smoke -- --run'
Stevenarella dev env: cargo/rustc/xvfb-run/OpenSSL/fontconfig/freetype/libxcb paths are available
OnixResearch tools are pinned over SSH: cairn, cargo-octet
   Compiling valence_build_utils v0.2.0-alpha.1+mc.1.20.1 (/home/brittonr/git/mc/servers/valence/crates/valence_build_utils)
   Compiling valence_ident_macros v0.2.0-alpha.1+mc.1.20.1 (/home/brittonr/git/mc/servers/valence/crates/valence_ident_macros)
   Compiling valence_nbt v0.8.0 (/home/brittonr/git/mc/servers/valence/crates/valence_nbt)
   Compiling valence_protocol_macros v0.2.0-alpha.1+mc.1.20.1 (/home/brittonr/git/mc/servers/valence/crates/valence_protocol_macros)
   Compiling valence_math v0.2.0-alpha.1+mc.1.20.1 (/home/brittonr/git/mc/servers/valence/crates/valence_math)
   Compiling valence_command_macros v0.2.0-alpha.1+mc.1.20.1 (/home/brittonr/git/mc/servers/valence/crates/valence_command_macros)
   Compiling valence_generated v0.2.0-alpha.1+mc.1.20.1 (/home/brittonr/git/mc/servers/valence/crates/valence_generated)
   Compiling valence_entity v0.2.0-alpha.1+mc.1.20.1 (/home/brittonr/git/mc/servers/valence/crates/valence_entity)
   Compiling valence_lang v0.2.0-alpha.1+mc.1.20.1 (/home/brittonr/git/mc/servers/valence/crates/valence_lang)
   Compiling valence_ident v0.2.0-alpha.1+mc.1.20.1 (/home/brittonr/git/mc/servers/valence/crates/valence_ident)
   Compiling valence_text v0.2.0-alpha.1+mc.1.20.1 (/home/brittonr/git/mc/servers/valence/crates/valence_text)
warning: unknown lint: `path_segment_repetition`
  --> crates/valence_text/src/color/mod.rs:12:9
   |
12 | #[allow(path_segment_repetition)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unknown_lints)]` on by default

warning: unknown lint: `path_segment_repetition`
  --> crates/valence_text/src/color/mod.rs:28:9
   |
28 | #[allow(path_segment_repetition)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^

warning: unknown lint: `path_segment_repetition`
  --> crates/valence_text/src/color/mod.rs:41:9
   |
41 | #[allow(path_segment_repetition)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^

warning: unknown lint: `path_segment_repetition`
  --> crates/valence_text/src/color/mod.rs:81:9
   |
81 | #[allow(path_segment_repetition)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^

warning: unknown lint: `deref_polymorphism`
 --> crates/valence_text/src/ops.rs:2:9
  |
2 | #[allow(deref_polymorphism)]
  |         ^^^^^^^^^^^^^^^^^^

warning: `valence_text` (lib) generated 5 warnings
   Compiling valence_protocol v0.2.0-alpha.1+mc.1.20.1 (/home/brittonr/git/mc/servers/valence/crates/valence_protocol)
   Compiling valence_server_common v0.2.0-alpha.1+mc.1.20.1 (/home/brittonr/git/mc/servers/valence/crates/valence_server_common)
   Compiling valence_registry v0.2.0-alpha.1+mc.1.20.1 (/home/brittonr/git/mc/servers/valence/crates/valence_registry)
   Compiling valence_server v0.2.0-alpha.1+mc.1.20.1 (/home/brittonr/git/mc/servers/valence/crates/valence_server)
   Compiling valence_inventory v0.2.0-alpha.1+mc.1.20.1 (/home/brittonr/git/mc/servers/valence/crates/valence_inventory)
   Compiling valence_boss_bar v0.2.0-alpha.1+mc.1.20.1 (/home/brittonr/git/mc/servers/valence/crates/valence_boss_bar)
   Compiling valence_anvil v0.1.0 (/home/brittonr/git/mc/servers/valence/crates/valence_anvil)
   Compiling valence_network v0.2.0-alpha.1+mc.1.20.1 (/home/brittonr/git/mc/servers/valence/crates/valence_network)
   Compiling valence_advancement v0.2.0-alpha.1+mc.1.20.1 (/home/brittonr/git/mc/servers/valence/crates/valence_advancement)
   Compiling valence_world_border v0.2.0-alpha.1+mc.1.20.1 (/home/brittonr/git/mc/servers/valence/crates/valence_world_border)
   Compiling valence_player_list v0.2.0-alpha.1+mc.1.20.1 (/home/brittonr/git/mc/servers/valence/crates/valence_player_list)
   Compiling valence_scoreboard v0.2.0-alpha.1+mc.1.20.1 (/home/brittonr/git/mc/servers/valence/crates/valence_scoreboard)
   Compiling valence_weather v0.2.0-alpha.1+mc.1.20.1 (/home/brittonr/git/mc/servers/valence/crates/valence_weather)
   Compiling valence_command v0.2.0-alpha.1+mc.1.20.1 (/home/brittonr/git/mc/servers/valence/crates/valence_command)
warning: unknown lint: `path_segment_repetition`
 --> crates/valence_inventory/src/slots.rs:4:9
  |
4 | #[allow(path_segment_repetition)]
  |         ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unknown_lints)]` on by default

   Compiling valence_equipment v0.2.0-alpha.1+mc.1.20.1 (/home/brittonr/git/mc/servers/valence/crates/valence_equipment)
   Compiling valence v0.2.0-alpha.1+mc.1.20.1 (/home/brittonr/git/mc/servers/valence)
warning: `valence_inventory` (lib) generated 1 warning
error[E0428]: the name `env_flag_enabled` is defined multiple times
    --> examples/ctf.rs:3339:1
     |
1326 | fn env_flag_enabled(name: &str) -> bool {
     | --------------------------------------- previous definition of the value `env_flag_enabled` here
...
3339 | fn env_flag_enabled(name: &str) -> bool {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `env_flag_enabled` redefined here
     |
     = note: `env_flag_enabled` must be defined only once in the value namespace of this module

For more information about this error, try `rustc --explain E0428`.
error: could not compile `valence` (example "ctf" test) due to 1 previous error
finished_at=2026-06-23T01:26:48Z
exit_status=101
